syntax = "proto3";

package shortener;

option go_package = "/pb";

message EmptyRequest {}

message PingResponse {
  int32 code = 1;
  string message = 2;
}

message StatsResponse {
  int32 code = 1;
  int32 urls = 2;
  int32 users = 3;
}

message URLRequest{
  string url = 1;
}
message URLFromTextResponse{
  int32 code = 1;
  string short_url = 2; 
}
message ShortURLRequest{
  string short_url = 1; 
} 

message URLResponse{
  int32 code = 1;
  string url = 2;
}

message BatchSaveRequest{
  message URL {
    string correlation_id = 1;
    string original_url = 2;
  }
  repeated URL urls = 1;
}

message BatchSaveResponse{
  message URL {
    string correlation_id = 1;
    string short_url = 2;
  }
  int32 code = 1;
  repeated URL urls = 2;
}
message UserURLsResponse{
  message URL {
    string short_url = 1;
    string original_url = 2;
  }
  int32 code = 1;
  repeated URL urls = 2;
}

message DelBatchRequest{
  int32 code = 1;
  repeated string urls = 2;
}

message DelBatchResponse {
  int32 code = 1;
}

service Shortener {
  rpc Ping(EmptyRequest) returns (PingResponse);
  rpc GetStats(EmptyRequest) returns (StatsResponse);
  rpc GetByShortURL(ShortURLRequest) returns (URLResponse);
  rpc SaveURLFromText(URLRequest) returns (URLFromTextResponse);
  rpc SaveBatch(BatchSaveRequest) returns (BatchSaveResponse);
  rpc GetUsersURLs(EmptyRequest) returns (UserURLsResponse);
  rpc DelBatch(DelBatchRequest) returns (DelBatchResponse);
}